# c-hashids

./: .gitignore  CMakeLists.txt  readme.md  run.sh
src/: demo.c  hash2go.c
